--- a/src/main/resources/com/example/sacms/dashboard.fxml
+++ b/src/main/resources/com/example/sacms/dashboard.fxml
@@ -1,14 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.sacms.Controller"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+   <children>
+      <Button fx:id="homeScreenButton" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" opacity="0.0" prefHeight="58.0" prefWidth="133.0" text="Button" />
+      <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Logo.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="clubScreenButton" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
+         <font>
+            <Font name="Noto Sans Regular" size="22.0" />
+         </font>
+      </Button>
+      <Button fx:id="clubScreenButton1" layoutX="712.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="113.0" style="-fx-background-color: FFFFFF;" text="EVENTS">
+         <font>
+            <Font name="Noto Sans Regular" size="22.0" />
+         </font>
+      </Button>
+      <Button fx:id="clubScreenButton11" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
+         <font>
+            <Font name="Noto Sans Regular" size="22.0" />
+         </font>
+      </Button>
+      <Button fx:id="userIconButton" layoutX="957.0" layoutY="24.0" mnemonicParsing="false" opacity="0.0" prefHeight="58.0" prefWidth="74.0" />
+      <ImageView fitHeight="58.0" fitWidth="56.0" layoutX="966.0" layoutY="25.0" opacity="0.94" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/UserIcon.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="dayLabelDashboard" layoutX="335.0" layoutY="116.0" prefHeight="62.0" prefWidth="104.0" text="THU">
+         <font>
+            <Font name="Noto Sans Regular" size="44.0" />
+         </font>
+      </Label>
+      <Label fx:id="dayNoLabelDashboard" layoutX="445.0" layoutY="116.0" prefHeight="62.0" prefWidth="56.0" text="03">
+         <font>
+            <Font name="Noto Sans Regular" size="44.0" />
+         </font>
+      </Label>
+      <Label fx:id="monthLabelDashboard" layoutX="504.0" layoutY="116.0" prefHeight="62.0" prefWidth="104.0" text="OCT">
+         <font>
+            <Font name="Noto Sans Regular" size="44.0" />
+         </font>
+      </Label>
+      <Label fx:id="timeLabelDashboard" layoutX="631.0" layoutY="116.0" prefHeight="62.0" prefWidth="126.0" text="15:34">
+         <font>
+            <Font name="Noto Sans Bold" size="44.0" />
+         </font>
+      </Label>
+      <Rectangle arcHeight="35.0" arcWidth="35.0" fill="#bcbcbc" height="385.0" layoutX="36.0" layoutY="238.0" stroke="#ab434300" strokeType="INSIDE" width="652.0" />
+      <Label layoutX="441.0" layoutY="171.0" text="Welcome">
+         <font>
+            <Font name="Noto Sans Regular" size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="userNameLabelDashboard" layoutX="538.0" layoutY="171.0" text="Username">
+         <font>
+            <Font name="Noto Sans Regular" size="20.0" />
+         </font>
+      </Label>
+      <Rectangle arcHeight="35.0" arcWidth="35.0" fill="#e1d789" height="207.0" layoutX="712.0" layoutY="238.0" stroke="#ab434300" strokeType="INSIDE" width="295.0" />
+      <ImageView fitHeight="163.0" fitWidth="295.0" layoutX="715.0" layoutY="460.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/DashboardBG.png" />
+         </image>
+      </ImageView>
+   </children>
 </AnchorPane>
