--- a/src/main/resources/com/example/sacms/signInTwo.fxml
+++ b/src/main/resources/com/example/sacms/signInTwo.fxml
@@ -1,14 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.sacms.Controller"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+    <children>
+        <ImageView fitHeight="56.0" fitWidth="123.0" layoutX="16.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../images/Logo.png" />
+            </image>
+        </ImageView>
+        <Label layoutX="28.0" layoutY="85.0" prefHeight="62.0" prefWidth="725.0" text="Create a Club Advisor account now">
+            <font>
+                <Font name="System Bold" size="42.0" />
+            </font>
+        </Label>
+        <Label layoutX="28.0" layoutY="196.0" text="Enter your firstname">
+            <font>
+                <Font size="22.0" />
+            </font>
+        </Label>
+        <Label layoutX="321.0" layoutY="196.0" text="Enter your lastname">
+            <font>
+                <Font size="22.0" />
+            </font>
+        </Label>
+        <TextField fx:id="firstNameSignInTwo" layoutX="28.0" layoutY="228.0" prefHeight="26.0" prefWidth="261.0" promptText="Firstname">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </TextField>
+        <TextField fx:id="lastNameSignInTwo" layoutX="321.0" layoutY="228.0" prefHeight="26.0" prefWidth="261.0" promptText="Lastname">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </TextField>
+        <Label layoutX="28.0" layoutY="292.0" text="Enter your contact number">
+            <font>
+                <Font size="22.0" />
+            </font>
+        </Label>
+        <TextField fx:id="contactNumSignInTwo" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="320.0" promptText="Contact number">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </TextField>
+        <Label layoutX="383.0" layoutY="292.0" text="Enter your position">
+            <font>
+                <Font size="22.0" />
+            </font>
+        </Label>
+        <TextField fx:id="positionSignInTwo" layoutX="383.0" layoutY="324.0" prefHeight="43.0" prefWidth="200.0" promptText="Position">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </TextField>
+        <Label layoutX="28.0" layoutY="392.0" text="Enter your Email">
+            <font>
+                <Font size="22.0" />
+            </font>
+        </Label>
+        <TextField fx:id="EmailSignInTwo" layoutX="28.0" layoutY="424.0" prefHeight="43.0" prefWidth="554.0" promptText="Email">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </TextField>
+        <Label layoutX="28.0" layoutY="487.0" text="Enter your Password">
+            <font>
+                <Font size="22.0" />
+            </font>
+        </Label>
+        <TextField fx:id="PasswordSignInTwo" layoutX="28.0" layoutY="519.0" prefHeight="43.0" prefWidth="554.0" promptText="Password">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </TextField>
+        <ImageView fitHeight="407.0" fitWidth="262.0" layoutX="648.0" layoutY="228.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../images/SignInScreen2BG.png" />
+            </image>
+        </ImageView>
+        <Button layoutX="696.0" layoutY="552.0" mnemonicParsing="false" onAction="#onStudentRegisterButtonClicked" prefHeight="43.0" prefWidth="178.0" style="-fx-background-color: #000000;" text="REGISTER" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="20.0" />
+            </font>
+        </Button>
+    </children>
 </AnchorPane>
