--- a/src/main/resources/com/example/sacms/eventsView.fxml
+++ b/src/main/resources/com/example/sacms/eventsView.fxml
@@ -1,14 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.sacms.Controller"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+   <children>
+      <Button fx:id="homeScreenButton" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="133.0" text="Button" />
+      <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Logo.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="clubScreenButton" layoutX="608.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: #FFFFFF;" text="CLUBS">
+         <font>
+            <Font name="Noto Sans Regular" size="22.0" />
+         </font>
+      </Button>
+      <Button fx:id="clubScreenButton1" layoutX="712.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="113.0" style="-fx-background-color: #FFFFFF;" text="EVENTS">
+         <font>
+            <Font name="Noto Sans Regular" size="22.0" />
+         </font>
+      </Button>
+      <Button fx:id="clubScreenButton11" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
+         <font>
+            <Font name="Noto Sans Regular" size="22.0" />
+         </font>
+      </Button>
+      <Button fx:id="userIconButton" layoutX="957.0" layoutY="24.0" mnemonicParsing="false" opacity="0.0" prefHeight="58.0" prefWidth="74.0" />
+      <ImageView fitHeight="58.0" fitWidth="56.0" layoutX="966.0" layoutY="25.0" opacity="0.94" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/UserIcon.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="27.0" layoutY="133.0" prefHeight="62.0" prefWidth="286.0" text="List of events">
+         <font>
+            <Font name="System Bold" size="42.0" />
+         </font>
+      </Label>
+      <Button layoutX="788.0" layoutY="142.0" mnemonicParsing="false" onAction="#onScheduleEventButtonOneClicked" prefHeight="26.0" prefWidth="233.0" style="-fx-background-color: #000000;" text="Schedule an event" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
+      <TableView layoutX="27.0" layoutY="219.0" prefHeight="422.0" prefWidth="994.0">
+        <columns>
+          <TableColumn prefWidth="173.6000213623047" text="Event Name" />
+          <TableColumn prefWidth="164.79998779296875" text="Date" />
+            <TableColumn prefWidth="164.0" text="Time" />
+            <TableColumn prefWidth="168.79998779296875" text="Club" />
+            <TableColumn prefWidth="158.39996337890625" text="Location" />
+            <TableColumn prefWidth="174.39990234375" text="Status" />
+        </columns>
+      </TableView>
+   </children>
 </AnchorPane>
