-Code written for Screen navigations -headers are completed - have to fix the wordings and button methods -have to complete reports and clubs view

--- a/src/main/resources/com/example/sacms/clubCreation.fxml
+++ b/src/main/resources/com/example/sacms/clubCreation.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-radius: 25;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: 00000000;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <Label layoutX="52.0" layoutY="179.0" text="Enter club name">
          <font>
@@ -57,9 +56,9 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <ImageView fitHeight="221.0" fitWidth="330.0" layoutX="698.0" layoutY="327.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="348.0" fitWidth="253.0" layoutX="715.0" layoutY="225.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../../ClubCreationScreenPic.jpg" />
+            <Image url="@../images/ClubCreationScreenPic.png" />
          </image>
       </ImageView>
    </children>
