--- a/src/main/resources/com/example/sacms/eventsView.fxml
+++ b/src/main/resources/com/example/sacms/eventsView.fxml
@@ -7,43 +7,63 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
+       <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+           <image>
+               <Image url="@../images/Logo.png" />
+           </image>
+       </ImageView>
+       <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="133.0" text="Button" />
+       <Button fx:id="clubScreenButton" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
+           <font>
+               <Font name="Noto Sans Regular" size="22.0" />
+           </font>
+       </Button>
+       <Button fx:id="eventScreenButton" layoutX="712.0" layoutY="26.0" mnemonicParsing="false" onAction="#onEventsViewScreenButtonClicked" prefHeight="58.0" prefWidth="113.0" style="-fx-background-color: FFFFFF;" text="EVENTS">
+           <font>
+               <Font name="Noto Sans Bold" size="22.0" />
+           </font>
+       </Button>
+       <Button fx:id="reportsScreenButton" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" onAction="#onReportsScreenButtonClicked" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
+           <font>
+               <Font name="Noto Sans Regular" size="22.0" />
+           </font>
+       </Button>
+       <ImageView fx:id="userIconButtonImage" fitHeight="58.0" fitWidth="56.0" layoutX="966.0" layoutY="25.0" opacity="0.94" pickOnBounds="true" preserveRatio="true">
+           <image>
+               <Image url="@../images/UserIcon.png" />
+           </image>
+       </ImageView>
+       <Button fx:id="userIconButton" layoutX="957.0" layoutY="24.0" mnemonicParsing="false" onAction="#onUserIconButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="74.0" />
+       <AnchorPane fx:id="userIconButtonOptionPane" layoutX="895.0" layoutY="96.0" opacity="0.0" prefHeight="91.0" prefWidth="113.0">
+           <children>
+               <Button fx:id="exitButton" layoutX="2.0" layoutY="1.0" mnemonicParsing="false" onAction="#onExitButtonClicked" prefHeight="43.0" prefWidth="104.0" style="-fx-background-color: FF9090;" text="EXIT">
+                   <font>
+                       <Font name="Noto Sans Bold" size="20.0" />
+                   </font>
+               </Button>
+               <Rectangle fx:id="todayEventView21" arcHeight="2.0" arcWidth="2.0" height="41.0" layoutX="2.0" layoutY="45.0" stroke="#ab434300" strokeType="INSIDE" width="104.0" />
+               <Label layoutX="9.0" layoutY="51.0" prefHeight="29.0" prefWidth="104.0" text="LOG OUT" textFill="WHITE">
+                   <font>
+                       <Font name="Noto Sans Regular" size="20.0" />
+                   </font>
+               </Label>
+               <Button fx:id="logoutButton" layoutX="5.0" layoutY="48.0" mnemonicParsing="false" onAction="#onLogOutButtonClicked" opacity="0.0" prefHeight="41.0" prefWidth="104.0" style="-fx-background-color:FFFFFF;" />
+           </children>
+       </AnchorPane>
+       <Button layoutX="1013.0" layoutY="99.0" mnemonicParsing="false" onAction="#onUserIconHideButtonClicked" opacity="0.0" prefHeight="84.0" prefWidth="34.0" />
       <Button fx:id="homeScreenButton" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="133.0" text="Button" />
-      <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/Logo.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="clubScreenButton" layoutX="608.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: #FFFFFF;" text="CLUBS">
-         <font>
-            <Font name="Noto Sans Regular" size="22.0" />
-         </font>
-      </Button>
-      <Button fx:id="clubScreenButton1" layoutX="712.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="113.0" style="-fx-background-color: #FFFFFF;" text="EVENTS">
-         <font>
-            <Font name="Noto Sans Regular" size="22.0" />
-         </font>
-      </Button>
-      <Button fx:id="clubScreenButton11" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
-         <font>
-            <Font name="Noto Sans Regular" size="22.0" />
-         </font>
-      </Button>
       <Button fx:id="userIconButton" layoutX="957.0" layoutY="24.0" mnemonicParsing="false" opacity="0.0" prefHeight="58.0" prefWidth="74.0" />
-      <ImageView fitHeight="58.0" fitWidth="56.0" layoutX="966.0" layoutY="25.0" opacity="0.94" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/UserIcon.png" />
-         </image>
-      </ImageView>
       <Label layoutX="27.0" layoutY="133.0" prefHeight="62.0" prefWidth="286.0" text="List of events">
          <font>
             <Font name="System Bold" size="42.0" />
          </font>
       </Label>
-      <Button layoutX="788.0" layoutY="142.0" mnemonicParsing="false" onAction="#onScheduleEventButtonOneClicked" prefHeight="26.0" prefWidth="233.0" style="-fx-background-color: #000000;" text="Schedule an event" textFill="WHITE">
+      <Button layoutX="627.0" layoutY="142.0" mnemonicParsing="false" onAction="#onScheduleEventButtonOneClicked" prefHeight="26.0" prefWidth="233.0" style="-fx-background-color: #000000;" text="Schedule an event" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
