--- a/src/main/resources/com/example/sacms/dashboard.fxml
+++ b/src/main/resources/com/example/sacms/dashboard.fxml
@@ -6,35 +6,35 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
-      <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="133.0" text="Button" />
       <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/Logo.png" />
          </image>
       </ImageView>
-      <Button fx:id="clubScreenButtonDashboard" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
+      <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="133.0" text="Button" />
+      <Button fx:id="clubScreenButtonDashboard" layoutX="604.0" layoutY="26.0" mnemonicParsing="false" onAction="#onClubsViewScreenButtonClicked" prefHeight="58.0" prefWidth="104.0" style="-fx-background-color: FFFFFF;" text="CLUBS">
          <font>
             <Font name="Noto Sans Regular" size="22.0" />
          </font>
       </Button>
-      <Button fx:id="eventScreenButtonDashboard" layoutX="712.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="113.0" style="-fx-background-color: FFFFFF;" text="EVENTS">
+      <Button fx:id="eventScreenButtonDashboard" layoutX="712.0" layoutY="26.0" mnemonicParsing="false" onAction="#onEventsViewScreenButtonClicked" prefHeight="58.0" prefWidth="113.0" style="-fx-background-color: FFFFFF;" text="EVENTS">
          <font>
             <Font name="Noto Sans Regular" size="22.0" />
          </font>
       </Button>
-      <Button fx:id="reportsScreenButtonDashboard" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
+      <Button fx:id="reportsScreenButtonDashboard" layoutX="825.0" layoutY="26.0" mnemonicParsing="false" onAction="#onReportsScreenButtonClicked" prefHeight="58.0" prefWidth="126.0" style="-fx-background-color: FFFFFF;" text="REPORTS">
          <font>
             <Font name="Noto Sans Regular" size="22.0" />
          </font>
       </Button>
-      <Button fx:id="userIconButton" layoutX="957.0" layoutY="24.0" mnemonicParsing="false" opacity="0.0" prefHeight="58.0" prefWidth="74.0" />
       <ImageView fx:id="userIconButtonDashboard" fitHeight="58.0" fitWidth="56.0" layoutX="966.0" layoutY="25.0" opacity="0.94" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/UserIcon.png" />
          </image>
       </ImageView>
+      <Button fx:id="userIconButton" layoutX="957.0" layoutY="24.0" mnemonicParsing="false" onAction="#onUserIconButtonClicked" opacity="0.0" prefHeight="62.0" prefWidth="74.0" />
       <Label fx:id="dayLabelDashboard" layoutX="335.0" layoutY="116.0" prefHeight="62.0" prefWidth="104.0" text="THU">
          <font>
             <Font name="Noto Sans Regular" size="44.0" />
@@ -147,15 +147,15 @@
             <Font name="Noto Sans Bold" size="20.0" />
          </font>
       </Label>
-      <Button fx:id="dashboardTodayEventViewButton1" layoutX="576.0" layoutY="332.0" mnemonicParsing="false" opacity="0.0" text="Button" />
-      <Button fx:id="dashboardTodayEventViewButton2" layoutX="576.0" layoutY="380.0" mnemonicParsing="false" opacity="0.0" text="Button" />
-      <Button fx:id="dashboardTodayEventViewButton3" layoutX="576.0" layoutY="515.0" mnemonicParsing="false" opacity="0.0" text="Button" />
+      <Button fx:id="dashboardTodayEventViewButton1" layoutX="562.0" layoutY="332.0" mnemonicParsing="false" onAction="#onEventsViewScreenButtonClicked" opacity="0.0" prefHeight="25.0" prefWidth="80.0" text="Button" />
+      <Button fx:id="dashboardTodayEventViewButton2" layoutX="565.0" layoutY="380.0" mnemonicParsing="false" onAction="#onEventsViewScreenButtonClicked" opacity="0.0" prefHeight="25.0" prefWidth="74.0" text="Button" />
+      <Button fx:id="dashboardTodayEventViewButton3" layoutX="562.0" layoutY="515.0" mnemonicParsing="false" onAction="#onEventsViewScreenButtonClicked" opacity="0.0" prefHeight="25.0" prefWidth="80.0" text="Button" />
       <Label layoutX="289.0" layoutY="603.0" text="View events here">
          <font>
             <Font name="Noto Sans Regular" size="20.0" />
          </font>
       </Label>
-      <Button fx:id="dashboardViewEventsHereButton" layoutX="281.0" layoutY="605.0" mnemonicParsing="false" opacity="0.0" prefHeight="25.0" prefWidth="177.0" text="Button" />
+      <Button fx:id="dashboardViewEventsHereButton" layoutX="281.0" layoutY="605.0" mnemonicParsing="false" onAction="#onEventsViewScreenButtonClicked" opacity="0.0" prefHeight="25.0" prefWidth="177.0" text="Button" />
       <Label layoutX="794.0" layoutY="265.0" text="Notifications">
          <font>
             <Font name="Noto Sans Regular" size="22.0" />
@@ -172,9 +172,9 @@
             <Font name="Noto Sans Regular" size="18.0" />
          </font>
       </Label>
-      <AnchorPane fx:id="userIconButtonOptionPaneDashboard" layoutX="910.0" layoutY="95.0" opacity="0.0" prefHeight="91.0" prefWidth="113.0">
+      <AnchorPane fx:id="userIconButtonOptionPane" layoutX="895.0" layoutY="96.0" opacity="0.0" prefHeight="91.0" prefWidth="113.0">
          <children>
-            <Button fx:id="exitButtonDashboard" layoutX="2.0" layoutY="1.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="104.0" style="-fx-background-color: FF9090;" text="EXIT">
+            <Button fx:id="exitButtonDashboard" layoutX="2.0" layoutY="1.0" mnemonicParsing="false" onAction="#onExitButtonClicked" prefHeight="43.0" prefWidth="104.0" style="-fx-background-color: FF9090;" text="EXIT">
                <font>
                   <Font name="Noto Sans Bold" size="20.0" />
                </font>
@@ -185,8 +185,9 @@
                   <Font name="Noto Sans Regular" size="20.0" />
                </font>
             </Label>
-            <Button fx:id="logoutButtonDashboard" layoutX="5.0" layoutY="48.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="104.0" style="-fx-background-color: 000000;" />
+            <Button fx:id="logoutButtonDashboard" layoutX="5.0" layoutY="48.0" mnemonicParsing="false" onAction="#onLogOutButtonClicked" opacity="0.0" prefHeight="41.0" prefWidth="104.0" style="-fx-background-color:FFFFFF;" />
          </children>
       </AnchorPane>
+      <Button layoutX="1013.0" layoutY="99.0" mnemonicParsing="false" onAction="#onUserIconHideButtonClicked" opacity="0.0" prefHeight="84.0" prefWidth="34.0" />
    </children>
 </AnchorPane>
