--- a/src/main/resources/com/example/sacms/loginScreen.fxml
+++ b/src/main/resources/com/example/sacms/loginScreen.fxml
@@ -6,16 +6,18 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-radius: 25;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-radius: 0;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
       <ImageView blendMode="SRC_ATOP" fitHeight="680.0" fitWidth="1050.0" pickOnBounds="true">
          <image>
-            <Image url="@../../../../../../../LoginScreenBG.png" />
+            <Image url="@../images/SignInScreen0BG.png" />
          </image>
       </ImageView>
-    <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="83.0" prefWidth="170.0" text="Button" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="44.0" layoutX="39.0" layoutY="33.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="114.0" />
+    <Button fx:id="" layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="170.0" text="Button" />
     <ImageView blendMode="MULTIPLY" fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../images/Logo.png" />
